// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/kustomize/extract extractPackageFile() extracts http dependency 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "gitTags",
    "depName": "github.com/user/repo//deploy",
    "lookupName": "github.com/user/repo",
    "source": "github.com/user/repo",
  },
]
`;

exports[`lib/manager/kustomize/extract extractPackageFile() extracts multiple image lines 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "gitTags",
    "depName": "https://moredhel/remote-kustomize.git",
    "lookupName": "https://moredhel/remote-kustomize.git",
    "source": "https://moredhel/remote-kustomize.git",
  },
  Object {
    "currentValue": "v0.0.1",
    "datasource": "gitTags",
    "depName": "https://moredhel/remote-kustomize.git//deploy",
    "lookupName": "https://moredhel/remote-kustomize.git//deploy",
    "source": "https://moredhel/remote-kustomize.git//deploy",
  },
]
`;

exports[`lib/manager/kustomize/extract extractPackageFile() extracts ssh dependency 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "gitTags",
    "depName": "git@github.com:moredhel/remote-kustomize.git",
    "lookupName": "git@github.com:moredhel/remote-kustomize.git",
    "source": "git@github.com:moredhel/remote-kustomize.git",
  },
]
`;

exports[`lib/manager/kustomize/extract extractPackageFile() extracts ssh dependency with a subdir 1`] = `
Array [
  Object {
    "currentValue": "v2.0.0",
    "datasource": "gitTags",
    "depName": "git@github.com:kubernetes-sigs/kustomize.git//examples/helloWorld",
    "lookupName": "git@github.com:kubernetes-sigs/kustomize.git",
    "source": "git@github.com:kubernetes-sigs/kustomize.git",
  },
]
`;
